j'ai crée les classes ,interfaces et j'ai configurée l'envirennement de travail avec spring JPA