@@ -1,6 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.example</groupId>
   <artifactId>Diabetes-Tracker</artifactId>
@@ -8,22 +7,11 @@
   <version>1.0-SNAPSHOT</version>
   <name>Diabetes-Tracker Maven Webapp</name>
   <url>http://maven.apache.org</url>
-
-  <properties>
-    <java.version>11</java.version>
-    <spring.version>5.3.20</spring.version>
-    <hibernate.version>5.5.7.Final</hibernate.version>
-    <maven.compiler.source>17</maven.compiler.source>
-    <maven.compiler.target>17</maven.compiler.target>
-  </properties>
-
   <dependencies>
-
-    <!-- JUnit for testing -->
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>4.13.2</version>
+      <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
 
@@ -81,23 +69,8 @@
       <version>8.0.28</version>
     </dependency>
 
-
   </dependencies>
-
   <build>
-    <plugins>
-      <!-- Maven Compiler Plugin -->
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.8.1</version>
-        <configuration>
-          <source>21</source>
-          <target>21</target>
-          <compilerArgs>--enable-preview</compilerArgs>
-        </configuration>
-
-      </plugin>
-    </plugins>
+    <finalName>Diabetes-Tracker</finalName>
   </build>
 </project>
